--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ nav li:hover .dropdown-content {
 ::-webkit-scrollbar-thumb:hover {
     background: #2d5500;
 }
+.Treats {
+    margin: 10px;
+    text-align: center;
+    list-style-type: none; /* Remove bullets */
+}
 .BakedGoods {
     justify-content: space-around;
 }
